syntax = "proto3";

package dfs.proto.sm_regist;

message storage_info_t {
    uint32 id = 1;
    uint32 port = 2;
    uint32 magic = 3;
    string ip = 4;
}

message request_t {
    storage_info_t storage_info = 1;
    uint32 master_magic = 2;
}

message response_t {
    uint32 storage_group = 1;
    repeated storage_info_t storage_info = 2;
}